# Road-Lane-Detection-Using-Computer-Vision

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
lane_detection/: __init__.py  cli.py  color.py  lines.py  pipeline.py  roi.py
tests/: test_pipeline.py
