[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lane-detection"
version = "0.2.0"
description = "Classical computer-vision pipeline for road lane line detection."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sanjay Santhanam" }]
keywords = ["computer-vision", "self-driving", "lane-detection", "opencv", "udacity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "numpy>=1.21",
    "opencv-python>=4.5",
]

[project.optional-dependencies]
video = ["moviepy>=1.0.3"]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
]

[project.scripts]
lane-detect = "lane_detection.cli:main"

[project.urls]
Homepage = "https://github.com/Sanjays2402/Road-Lane-Detection-Using-Computer-Vision"
Issues = "https://github.com/Sanjays2402/Road-Lane-Detection-Using-Computer-Vision/issues"

[tool.setuptools]
packages = ["lane_detection"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py39"
